...

    <include
        android:id="@+id/toolbarEdit"
        layout="@layout/toolbar" />

    <EditText
        android:id="@+id/titleEdit"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_below="@+id/toolbarEdit"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentEnd="true"
...
        android:background="@color/transparent"
        android:clipToPadding="false"
        android:paddingTop="8dp"
        android:paddingBottom="8dp">

        <EditText
            android:id="@+id/bodyEdit"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/transparent"
            android:ems="10"
            android:gravity="start|end"
            android:hint="@string/note_body"
...
