...
    android:orientation="vertical"
    android:focusableInTouchMode="false"
    android:descendantFocusability="blocksDescendants"
    android:background="@drawable/rounded_card" >

    <TextView
        android:id="@+id/titleView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="5dp"
...
