...
        android:paddingTop="8dp"
        android:paddingRight="16dp"
        android:paddingBottom="8dp"
        android:scrollbarStyle="outsideOverlay" />

    <ImageButton
        android:id="@+id/newNote"
        android:layout_width="65dp"
        android:layout_height="65dp"
        android:layout_alignParentRight="true"
        android:layout_alignParentBottom="true"
        android:layout_marginRight="30dp"
        android:layout_marginBottom="30dp"
...
